# norm

./: .gitignore  .travis.yml  CNAME  Dockerfile  LICENSE  README.md  README.rst  app.db  bar.nim  book.json  changelog.html  changelog.md  changelog.rst  compose.yml  config.html  config.nims  customDatatypes.html  debug.html  dochack.js  docker-compose.yml  fancy.html  fk.html  foo.nim  hellonorm.nim  index.html  indexes.html  models.html  models.nim  nbook.nim  nimib.toml  norm.html  norm.idx  norm.nimble  normapp.db  normapp.nim  petshop.db  pool.html  rester.nimble  test.db  test.db-journal  (+4 more)
.github/: FUNDING.yml
api/: norm.html  norm.idx  theindex.html
apidocs/: dochack.js  norm.html  norm.idx  theindex.html
benchmark/: bulkUpdate.nim  config.nims
book/: book.json  caveats.nim  changelog.nim  config.nim  customDatatypes.nim  debug.nim  document.mustache  fancy.nim  fk.nim  head.mustache  header.mustache  index.nim  indexes.nim  models.nim  pool.nim  transactions.nim  tutorial.nim
docs/: Dockerfile  README.md  docker-compose.yml  foliant.yml  index.rst  mkdocs.yml  pyproject.toml  quickstart.rst  requirements.txt
docs/src/: changelog.md  contributing.md  index.md  reference.md  tutorial.md
htmldocs/: norm.html
norm/: model.html  model.idx  objutils.html  objutils.idx  objutils.nim  oldrowutils.html  postgres.html  postgres.idx  pragmas.html  pragmas.idx  rowutils.html  rowutils.nim  sqlite.html  sqlite.idx  typedefutils.html  typedefutils.idx  types.html
src/: config.nims  norm.nim  rester.nim
tests/: config.nims  models.nim  test.nim  testnorm.nim  (+60 more)
(+177 files in other folders)
